--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "element-ui": "^2.13.2",
+    "axios": "^0.19.2",
+    "core-js": "^3.6.4",
+    "cropperjs": "^1.5.6",
+    "echarts": "^4.7.0",
+    "element-tiptap": "^1.19.0",
+    "element-ui": "^2.13.1",
+    "json-bigint": "^0.3.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
